# jobs

./: README.md  build_site_data.py  make_csv.py  make_prompt.py  parse_detail.py  parse_occupations.py  process.py  pyproject.toml  score.py  scrape.py
.github/workflows/: ci.yml
src/jobs/: __init__.py  parse.py  scoring.py
tests/: test_parse.py
